Update by i3 in Friday, 16 de June de 2023 at 10:58

--- a/dockerfiles/celery/Dockerfile
+++ b/dockerfiles/celery/Dockerfile
@@ -35,8 +35,9 @@ USER celery
 # Diretório do usuário
 WORKDIR /home/celery
 
-# Cria diretório de Logs
-RUN mkdir log 
+# Cria diretório de LOGs e PIDs
+RUN mkdir log; \
+    mkdir run; 
 
 ##---------------------------##
 ##  2a fase - REQUERIMENTOS  ##
