Update by i3 in Thursday, 29 de June de 2023 at 16:55

--- a/dockerfiles/celery/Dockerfile
+++ b/dockerfiles/celery/Dockerfile
@@ -76,6 +76,14 @@ COPY --chown=1000:1000 app/worker/*.py worker/
 RUN mkdir -p worker/tasks
 COPY --chown=1000:1000 app/worker/tasks/*.py worker/tasks/
 
+# Prepara o diretório 'worker/tasks/default'
+RUN mkdir -p worker/tasks/default
+COPY --chown=1000:1000 app/worker/tasks/default/*.py worker/tasks/default/
+
+# Prepara o diretório 'worker/tasks/long'
+RUN mkdir -p worker/tasks/long
+COPY --chown=1000:1000 app/worker/tasks/long/*.py worker/tasks/long/
+
 # Prepara o diretório 'scheduler'
 RUN mkdir -p worker/scheduler
 COPY --chown=1000:1000 app/worker/scheduler/*.py worker/scheduler/
