--- a/dockerfiles/webapi/Dockerfile
+++ b/dockerfiles/webapi/Dockerfile
@@ -74,6 +74,18 @@ COPY --chown=1000:1000 app/worker/*.py worker/
 RUN mkdir -p worker/tasks
 COPY --chown=1000:1000 app/worker/tasks/*.py worker/tasks/
 
+# Prepara o diretório 'worker/tasks/default'
+RUN mkdir -p worker/tasks/default
+COPY --chown=1000:1000 app/worker/tasks/default/*.py worker/tasks/default/
+
+# Prepara o diretório 'worker/tasks/long'
+RUN mkdir -p worker/tasks/long
+COPY --chown=1000:1000 app/worker/tasks/long/*.py worker/tasks/long/
+
+# Prepara o diretório 'worker/tasks'
+#RUN mkdir -p worker/tasks
+#COPY --chown=1000:1000 app/worker/tasks/*.py worker/tasks/
+
 
 
 
